# ls-types

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Justfile  README.md  config.toml
.github/workflows/: rust.yml
src/: code_action.rs  code_lens.rs  completion.rs  document_diagnostic.rs  document_highlight.rs  document_symbols.rs  folding_range.rs  inlay_hint.rs  inline_completion.rs  lib.rs  lsif.rs  macros.rs  manual.rs  notebook.rs  notification.rs  progress.rs  rename.rs  request.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  uri.rs  window.rs  workspace_symbols.rs
src/lsp/: basic.rs  mod.rs  trace.rs  workspace_symbols.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  config.rs  config.toml  main.rs  schema.rs  target.rs  translate.rs
xtask/src/generate/: codegen.rs  config.rs  schema.rs  target.rs  translate.rs
