[workspace]
members = [
    ".",
    "xtask",
]

[workspace.lints.rust]
unsafe_code = "forbid"
[workspace.lints.rustdoc]
all = "warn"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
todo = "warn"

[package]
name = "ls-types"
version = "0.1.0"
edition = "2024"

description = "Types for the Language Server Protocol specification"
authors = ["Milo Moisson <milo@wiro.world>"]
repository = "https://github.com/tower-lsp-community/ls-types"
keywords = ["language-server", "lsp", "lsif"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
bitflags = "2"
fluent-uri = "0.4"
percent-encoding = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
# targets latest release
default = ["3.17.0"]

# no semver guarentee for the upcoming version
"3.18.0" = ["3.17.0"]

"3.17.0" = ["3.16.0"]
"3.16.0" = ["3.15.0"]
"3.15.0" = []

[lints]
workspace = true
