lints.workspace = true

[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
heck = "0.5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
smol_str = { version = "0.3", features = ["serde"] }
thin-vec = "0.2"
toml = "0.9"
fasthash = "0.4"
eyre = "0.6.12"
